manifests/ghost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  labels:
    app: ghost
