manifests/ghost/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghost-redirect-https
  namespace: ghost
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost
  namespace: ghost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ghost.smeyer.ca`)
      kind: Rule
      services:
        - name: ghost
          port: 80
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost-http
  namespace: ghost
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ghost.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: ghost-redirect-https
      services:
        - name: ghost
          port: 80
